--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -39,7 +39,7 @@
       <ul class="nav navbar-nav">
         <li ><a href=" {% url 'courses:main' %} ">Main</a></li>
         <li><a href=" {% url 'contact' %}" >Contacts</a></li>
-        <li class="active"><a href="" >Students</a></li>
+        <li class="active"><a href=" {% url 'students:list_view' %}" >Students</a></li>
         
         </li>
       </ul>
