--- a/templates/courses/main.html
+++ b/templates/courses/main.html
@@ -66,7 +66,7 @@
           {% for item in courses %}
           <tr>
           <td><a href="{% url 'courses:detail' pk=item.id %}">{{ item.name }}</a></td>
-          <td>{{ item.description }}</td>
+          <td>{{ item.short_description }}</td>
     
           {% endfor %}
          </tr> 
