Spare classes removed

--- a/templates/courses/main.html
+++ b/templates/courses/main.html
@@ -37,9 +37,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href=" {% url 'courses:main' %} ">Main</a></li> 
-        <li><a href=" {% url 'contact' %}" >Contacts</a></li>
-        <li><a href=" {% url 'students:list_view' %}" >Students</a></li>
+        <li class="active"><a href="{% url 'courses:main' %}">Main</a></li> 
+        <li><a href="{% url 'contact' %}">Contacts</a></li>
+        <li><a href="{% url 'students:list_view' %}">Students</a></li>
       
         </li>
       </ul>
@@ -52,9 +52,9 @@
 </ol>
   <div class="container">
     <div class="jumbotron">
-      <h1 class="description">Ooniversity </h1>
-      <h2 class="course">Мы специализируемся на "модных" языках программирования. Принципиальное наше отличие от других курсов - максимум практики и жесткая система обязательных домашних заданий. </h2>
-      <h3 class="program">Выбирай, на каком курсе ты хочешь учиться!</h3>
+      <h1>Ooniversity </h1>
+      <h2>Мы специализируемся на "модных" языках программирования. Принципиальное наше отличие от других курсов - максимум практики и жесткая система обязательных домашних заданий. </h2>
+      <h3>Выбирай, на каком курсе ты хочешь учиться!</h3>
       <table class="table">
       <thead>
         <tr>
