--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
 <body>
     <div id="menu">
         <ul class="nav nav-pills">
-            <li role="presentation"  class="active"><a href="{% url 'index' %}">Main</a></li>
+            <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
             <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li role="presentation"> <a href="{% url 'students:list_view'%}">Students</a></li>
+            <li role="presentation"><a href="{% url 'students:list_view'%}">Students</a></li>
         </ul>
     </div>
     <div class="jumbotron">
