--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -13,7 +13,7 @@
         <ul class="nav nav-pills">
             <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
             <li role="presentation"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li role="presentation"class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
+            <li role="presentation"><a href="{% url 'students:list_view' %}">Students</a></li>
         </ul>
     </div>
     <div class="jumbotron">
