--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,3 +54,4 @@ h4 {font-weight: bold}
 #res_controls {width: 75%}
 #res_controls table thead {background-color: #4682B4; color: white; font-weight: bold}
 #res_controls table tbody {background-color: #5F9EA0}
+#students_detail {text-align:center}
