--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@
         <tbody>
         {% for course in courses_list %}
         <tr>
-        <td>{{ course.name }}</td>
+        <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
         <td>{{ course.short_description }}</td>
         </tr>
         {% endfor %}
