--- a/static/css/style.css
+++ b/static/css/style.css
@@ -46,7 +46,9 @@
 
 .topping_students {background-color:#EBEBE3;margin-top:20px;border:none;height:30px;}
 .page-header .student-head {color:#290701; margin-left:30px;}
+.page-header .student-head2 {color:#290701; margin-left:70px;}
 .below-header {color:#290701; margin-left:30px;}
+.below-header2 {color:#290701; margin-left:70px;}
 .panel-default .panel-heading .course_program {color:#290701;background-color:#f0ad4e;margin-left:15px;}
 .study_table {margin-left:-110px;}
 .study_table2 {margin-left:-150px;}
