--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -34,13 +34,13 @@
       </div>
 		</nav>
   	<div class="page-header">
-                               {% for student in students_on_course %}
-    	<h1 class="student-head">{{ student.name}} {{student.surname }}</h1>
+                                    {% for student in students_on_course %}
+    	<h1 class="student-head">{{ student.first_name}} {{student.surname }}</h1>
         <p class="below-header">Выпуск 2015</p>                         
   	</div>
 		<div class="study_table2">
 		  <div class="panel panel-default">
-  	    <div class="panel-heading"><h2 class="course_program" >информация о студенте</h2></div>
+  	    <div class="panel-heading"><h2 class="course_program" >информация о учителе</h2></div>
           <table class="table table-hover">
             <tr><td><h3>
                         дата рождения
