--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -11,9 +11,9 @@
 <body>
     <div id="menu">
         <ul class="nav nav-pills">
-            <li role="presentation"> <a href="{% url 'index' %}">Main</a></li>
-            <li role="presentation"> <a href="{% url 'contact' %}">Contacts</a></li>
-            <li role="presentation"> <a href="{% url 'students:list_view'%}?course_id={{ item.id }}">Students</a></li>
+            <li><a href="{% url 'index' %}">Main</a></li>
+            <li><a href="{% url 'contact' %}">Contacts</a></li>
+            <li><a href="{% url 'students:list_view'%}?course_id={{ item.id }}">Students</a></li>
         </ul>
     </div>
     <div class="jumbotron">
