--- a/templates/courses/main.html
+++ b/templates/courses/main.html
@@ -37,11 +37,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'courses:main' %}">Main</a></li> 
+        <li class="active"><a href="{% url 'courses:main' %}">Main</a></li> 
         <li><a href="{% url 'contact' %}">Contacts</a></li>
         <li><a href="{% url 'students:list_view' %}">Students</a></li>
-      
-        </li>
       </ul>
      
     </div><!-- /.navbar-collapse -->
@@ -67,9 +65,8 @@
           <tr>
           <td><a href="{% url 'courses:detail' pk=item.id %}">{{ item.name }}</a></td>
           <td>{{ item.short_description }}</td>
-    
+          </tr> 
           {% endfor %}
-         </tr> 
       </tbody>
     </table>
     </div>
