--- a/templates/index.html
+++ b/templates/index.html
@@ -205,7 +205,49 @@ WEB разработки </p>
     </section>
     <!-- creative studio end Here -->
 
+    <!-- Our Partner Section Start Here-->
+    <section class="partner-site">
+      <div class="container">
+        <div class="sec-title text-center">
+          <h2 class="title"> Ooniversity</h2>
+        </div>
+          <div class="article-list wow bounceInDown" data-wow-duration="0.5s" data-wow-delay="0s">
 
+            <p> Ooniversity is an education company. But not one in the way you might think. We're committed to building the best learning experience inside and out, making Ooniversity the best place for our team to learn, teach, and create the learning experience of the future.</p>
+</div>
+
+      </div>
+    </section>
+    <!-- Our Partner Section End Here-->
+
+          <!-- Our Partner Section Start Here-->
+    <section class="partner-site">
+      <div class="container">
+        <div class="sec-title text-center">
+          <h3>Join our courses!</h3>
+        </div>
+<center><div class="table-responsive">  <table class="table table-striped table-bordered table-nonfluid">
+
+        <tbody>
+            <tr>
+              <th>Name</th>
+              <th>Description</th>
+            </tr>
+            {% if all_courses %}
+              {% for course in all_courses %}
+                <tr>
+                  <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
+                  <td>{{ course.short_description }}</td>
+                </tr>
+              {% endfor %}
+            {% endif %}
+        </tbody>
+    </table>
+  </div></center>
+
+      </div>
+    </section>
+    <!-- Our Partner Section End Here-->
     
 
     <!-- responsive design Start Here -->
