--- a/templates/index_course.html
+++ b/templates/index_course.html
@@ -31,7 +31,7 @@
             <ul class="nav nav-pills">
               <li role="presentation" class="active"><a href="{% url 'index_course' %}">Главная</a></li>
               <li role="presentation" class="passive"><a href="{% url 'contact' %}">Контакты</a></li>
-              <li role="presentation" class="passive"><a href="#">Студенты</a></li>
+              <li role="presentation" class="passive"><a href="{% url 'students:list_view'%}">Студенты</a></li>
             </ul>
         </div>
       </nav>
