--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Course detail</title>
+    <title>Список студентов</title>
 
     <!-- Bootstrap -->
     <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
@@ -31,33 +31,35 @@
           <ul class="nav nav-pills">
             <li role="presentation" class="active"><a href="{% url 'index_course' %}">Главная</a></li>
             <li role="presentation" class="passive"><a href="{% url 'contact' %}">Контакты</a></li>
-            <li role="presentation" class="passive"><a href="{% url 'students:list_view'%}?course_id={{course.id}}">Студенты</a></li>
+            <li role="presentation" class="passive"><a href="{% url 'students:list_view'%}">Студенты</a></li>
           </ul>
       </div>
-      <div class="col-md-12" >
-        <div class="jumbotron">
-          <h1>{{course.name}}</h1>
-          <p>{{course.short_description}}</p>
-        </div>
-      </div>
       <div class="container-fluid">
-        <h3>План курса</h3>
+        <h3>Список студентов</h3>
       </div>
       <div id="spisok">
         <table class="table table-bordered">
           <thead>
             <tr>
-              <th>#</th>
-              <th>Курс</th>
-              <th>Описание</th>
+              <th id="students_detail">#</th>
+              <th>Фамилия Имя</th>
+              <th>адрес</th>
+              <th>skype</th>
+              <th>Курсы</th>
             </tr>
           </thead>
           <tbody>
-            {%for les in lesson %}
+            {%for st in students_list_course %}
               <tr>
-                <td>{{les.order}}</td>
-                <td>{{les.subject}}</td>
-                <td>{{les.description}}</td>
+                <td id="students_detail">{{forloop.counter}}</td>
+                <td><a href="{% url 'students:detail' st.id %}">{{st.surname}}{{' '}}{{st.name}}</a></td>
+                <td>{{st.address}}</td>
+                <td>{{st.skype}}</td>
+                <td>
+                  {% for cour in st.courses.all %}
+                    <p><a href="{% url 'courses:detail' cour.id %}">{{cour.name}}</a></p>
+                  {% endfor %}
+                </td>
               </tr>
             {% endfor %}
           </tbody>
