--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -56,7 +56,7 @@
           <nav>
             <ul class="nav navbar-nav">
               <li> <a href="{% url 'index' %}">Main </a> </li>
-              <li> <a href="{% url 'students:list_view' %}">Students </a> </li>
+              <li> <a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students </a> </li>
               <li> <a href="{% url 'contact' %}">Contacts</a> </li>
               <li> <a style="visibility: visible;" class="search-button" href={% url 'index' %}"><i class="icon icon-Search">.</i></a> </li>
             </ul>
