--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -57,7 +57,7 @@
           <nav>
             <ul class="nav navbar-nav">
               <li> <a href="{% url 'index' %}">Main </a> </li>
-              <li> <a href="{% url 'students:list_view' %}">Students </a> </li>
+              <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
               <li> <a href="{% url 'contact' %}">Contacts</a> </li>
               <li> <a style="visibility: visible;" class="search-button" href="{% url 'index' %}"><i class="icon icon-Search">.</i></a> </li>
             </ul>
