--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -55,10 +55,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <nav>
             <ul class="nav navbar-nav">
-              <li> <a href="{% url 'index' %}">Main </a> </li>
-              <li> <a href="{% url 'students:list_view' %}">Students </a> </li>
-              <li> <a href="{% url 'contact' %}">Contacts</a> </li>
-              <li> <a style="visibility: visible;" class="search-button" href={% url 'index' %}"><i class="icon icon-Search">.</i></a> </li>
+              <li><a href="{% url 'index' %}">Main </a></li>
+              <li><a href="{% url 'students:list_view' %}">Студенты</a></li>
+              <li><a href="{% url 'contact' %}">Contacts</a></li>
+              <li><a style="visibility: visible;" class="search-button" href={% url 'index' %}"><i class="icon icon-Search">.</i></a></li>
             </ul>
             <div style="" class="bg-white hide-show-content no-display header-search-content">
               <form class="navbar-form vertically-absolute-middle">
