--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,7 +23,7 @@
     <li role="presentation"><a href="{% url 'index' %}">PyBursa</a></li>
   <li role="presentation"><a href="{% url 'index' %}">Main</a></li>
   <li role="presentation"class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-  <li role="presentation"><a href="{% url 'student_list' %}">Students</a></li>
+  <li role="presentation"><a href="{% url 'students:list_view' %}">Students</a></li>
 </ul>
 <div class="container">
 <div class="panel panel-default">
