--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -19,10 +19,10 @@
   </head>
   <body>
 <ul class="nav nav-pills">
-  <li role="presentation" class="active"><a href="#">PyBursa</a></li>
-  <li role="presentation"><a href="index.html">Main</a></li>
-  <li role="presentation"><a href="contact.html">Contacts</a></li>
-  <li role="presentation"><a href="student_list.html">Students</a></li>
+  <li role="presentation"><a href="/">PyBursa</a></li>
+  <li role="presentation"><a href="/">Main</a></li>
+  <li role="presentation"><a href="/contact/">Contacts</a></li>
+  <li role="presentation"><a href="/student_list/">Students</a></li>
 </ul>
 <div class="container">
 <div class="page-header">
