lesson 5.1 and 5.2 is done

--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -22,7 +22,7 @@
   <body>
   <div class="wrapper">
     <div class="header container">
-      <h1>Курс PyBursa</h1>
+      <h1>Курс OONIVERSITY</h1>
     </div>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -67,16 +67,16 @@
               <tr>
                 <td scope="row">2</td>
                 <td>Petrov</td>
-                <td>Jacob</td>
+                <td>Ivan</td>
                 <td>Украина, г.Харьков, Пр.Победы, д.253 кв.4</td>
-                <td>J.Petrov</td>
+                <td>Ivan.Petrov</td>
               </tr>
               <tr>
                 <td scope="row">3</td>
-                <td>Sidorov</td>
-                <td>Larry</td>
+                <td>Oleg</td>
+                <td>Stulkin</td>
                 <td>Украина, г.Харьков, ул.Блюхера, д.25 кв.31</td>
-                <td>L.Sidorov</td>
+                <td>Oleg.Stulkin</td>
               </tr>
               <tr>
                 <td scope="row">4</td>
