--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -22,7 +22,7 @@
   <body>
   <div class="wrapper">
     <div class="header container">
-      <h1>Курс PyBursa</h1>
+      <h1>Курс OONIVERSITY</h1>
     </div>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
