--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -45,9 +45,9 @@
 
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="{% url 'index' %}">Main</a></li>
+            <li class="active"><a href="{% url 'index' %}">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -56,7 +56,18 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1 class="starter-template">Gubkina Anna</h1>
+        <h2 class="starter-template">{{ course.name }}</h2>
+        <h2 class="starter-template">{{ course.description }}</h2>
+
+    <ul>
+    {% for lesson in lessons_list %}
+        <li>{{ lesson.subject }}</li>
+    {% endfor %}
+    </ul>
+
+    <p>No lessons are available.</p>
+
+
 
       </div>
 
