--- a/templates/courses/index.html
+++ b/templates/courses/index.html
@@ -37,7 +37,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="{% url 'courses:list_view' %}">Main</a></li> 
+        <li><a href="{% url 'courses:list_view' %}">Main</a></li> 
         <li><a href="{% url 'contact' %}">Contacts</a></li>
         <li><a href="{% url 'students:list_view' %}">Students</a></li>
       </ul>
