--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,99 +1,103 @@
-﻿{% load staticfiles %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Our Team | Contacts</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static "css/style.css" %}" rel="stylesheet">
-
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="{% static "js/ie-emulation-modes-warning.js" %}"></script>
-    <script src="{% static "js/bootstrap.js" %}"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>ITBursa Контакты</title>
+  <!-- Bootstrap -->
+  <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
+  <link href="{% static 'css/style.css'%}" rel="stylesheet">
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-<body>
-
+<body role="document">
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-
-      <!-- The justified navigation menu is meant for single line per list item.
-           Multiple lines will require custom code not provided by Bootstrap. -->
-      <div class="masthead">
-        <h3 class="text-muted">Pybursa</h3>
-        <nav>
-          <ul class="nav nav-justified">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-            <li class=><a href="{% url 'student_list' %}">Students</a></li>
-          </ul>
-        </nav>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{% url 'index' %}">
+          <img class="logo" alt="Logo" src="{% static 'images/logo.svg'%}">
+        </a>
       </div>
-
-      <!-- Jumbotron -->
-      <div class="jumbotron">
-        <h1>Our Team</h1>
-        <p class="lead">Best team and best professional courses. PyBursa - best choiсe!</p>
-        <p><a class="btn btn-lg btn-success" href="http://pybursa.com/" role="button">Get started today</a></p>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="{% url 'index' %}">Main</a></li>
+          <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+          <li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
+        </ul>
       </div>
-
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-lg-4">
-          <h2>Manager</h2>
-          <img src="{% static "images/director.jpg" %}" class="img-responsive img-rounded">
-          <p>Manager course</p>
-          <p><b>Name:</b> Алена Чайка</p>
-          <p>Skype: alena.itbursa</p>
-          <p>Email: alena.itbursa@gmail.com</p>
-          <p>Phone: +38 063 625 07 55</p>
-        </div>
-        <div class="col-lg-4">
-          <h2>Director</h2>
-          <img src="{% static "images/manager.jpg" %}" class="img-responsive img-rounded">
-          <p>Director course</p>
-          <p><b>Name:</b> Дария Михалевич</p>
-          <p>Skype: darka.darka.darka.darka.</p>
-          <p>Email: daria.mykhalevych@gmail.com</p>
-          <p>Phone: +38 096 469 15 57</p>
-       </div>
-        <div class="col-lg-4">
-          <h2>Founder</h2>
-          <img src="{% static "images/osnovatel.jpg" %}" class="img-responsive img-rounded">
-          <p>Founder course</p>
-          <p><b>Name:</b> Павел Обод</p>
-          <p>Skype: azaless</p>
-          <p>Email: itbursa100@gmail.com</p>
-          <p>Phone: +38 096 469 15 57</p>
-        </div>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
+  <div class="container theme-showcase" role="main">
+    <div class="jumbotron">
+      <div class="col-sm-6">
+        <h1>Director</h1>
+        <p>
+          Name: <span class="name">Соболев Георгий Григорьевич</span>
+          <br> Skype:
+          <span class="skype">sobolevgeorgiy45</span>
+          <br>
+          <u class="courses">Email:sobolevgeorgiy45@gmail.com</u>
+          <br> Phone:
+          <span class="phone">8 (945) 825-33-72</span>
+          <br>
+        </p>
       </div>
+      <div class="col-sm-6">
+        <img class="photo" src="{% static 'images/director.png'%}" id="dir">
+      </div>
+      <div class="col-sm-6">
+        <h1>Founder</h1>
+        <p>
+          Name: <span class="name">Филиппова Татьяна Федоровна</span>
+          <br> Skype:
+          <span class="skype">FilippovaTatyana391</span>
+          <br> Email:filippovatatyana391@gmail.com
+          <br> Phone:
+          <span class="phone">8 (950) 186-92-74</span>
+          <br>
+        </p>
+      </div>
+      <div class="col-sm-6">
+        <img class="photo" src="{% static 'images/manager.png'%}" id="manager">
+      </div>
+      <div>
+        <h1>Manager</h1>
+        <p>
+          Name: <span class="name">Миронов Вениамин Макарович</span>
+          <br> Skype:
+          <span class="skype">MironovVeniamin59</span>
+          <br> Email:mronovveniamin595@gmail.com
+          <br> Phone:
+          <span class="phone">8 (935) 908-42-52</span>
+          <br>
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="panel-footer newfooter">
+    Сайт компании <span class="firma">ООО"блбаба"</span>. <span id="prava">Все права защищены</span>
+  </div>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="{% static 'js/bootstrap.min.js'%}"></script>
+</body>
 
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; ItBursa 2015</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
 </html>
