--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -7,9 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>ITBursa Главная</title>
+  <title>ITBursa информация о студенте</title>
   <!-- Bootstrap -->
-  
   <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
   <link href="{% static 'css/style.css'%}" rel="stylesheet">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -39,7 +38,7 @@
         <ul class="nav navbar-nav">
           <li><a href="{% url 'index' %}">Main</a></li>
           <li><a href="{% url 'contact' %}">Contacts</a></li>
-          <li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
+          <li><a href="{% url 'students:list_view' %}?course_id={{course.id}}">Students</a></li>
         </ul>
       </div>
       <!--/.nav-collapse -->
@@ -49,22 +48,10 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Description PyBursa</h1>
-      </div>
-      <p>
-        Курсы ItBursa начали работу в 2014 году. Мы специализируемся на <span class="glav">«модных» </span>языках программирования. Принципиальное наше отличие от других курсов – <span class="glav">максимум практики</span> и жесткая система обязательных домашних заданий.</p>
-      <p>
-        Преподаватели – опытные практикующие разработчики, они помогают участникам в ходе курсов создать реальные проекты и получить практические навыки, применимые к работе. Домашние задания на наших курсах обязательны и их невыполнение приводит к исключению с курсов. Таким образом, мы готовим не просто «слушателей» курсов, а настоящих специалистов, способных создавать пусть простые, но рабочие проекты.
-      </p>
-      <p>
-        За более детальной информацией можно обратиться по номерам указанным в <a class="text-primary" href="contact.html">контактах</a>
-      </p>
-      <p>
-        Чтобы посмотреть список курсов который на данный момент проходят в ItBursa <a class="text-info" href="http://itbursa.com/">нажмите здесь</a>
-      </p>
-      <div class="page-header">
-        <div class="container">
-          <h1>Выбирай любой курс</h1>
+      <div class="col-md-12">
+        <h1>{{course}}</h1>
+        
+        <h3>{{course.description}}</h3>
         </div>
       </div>
       <div class="row">
@@ -72,17 +59,18 @@
           <table class="table">
             <thead>
               <tr>
-                <th class="panel-heading">Курс</th>
+                <th class="panel-heading">#</th>
+                <th class="panel-heading">Тема</th>
                 <th class="panel-heading">Описание</th>
               </tr>
             </thead>
             <tbody>
-            {% for c in course%}
+            {% for c in lessons%}
               <tr>
-                
-                <td class="tdfunc"><a href="{%url 'courses:detail' c.id%}">{{c}}<a></td>
+                <td class="first">{{c.order}}</td>
+                <td class="tdfunc">{{c}}</td>
                 <td>
-                  {{c.short_description}}
+                  {{c.description}}
                 </td>
               </tr>
             {% endfor%}
@@ -90,8 +78,11 @@
             </tbody>
           </table>
         </div>
+        
+
       </div>
     </div>
+  </div>
   </div>
   <div class="panel-footer newfooter">
     Сайт компании <span class="firma">ООО"блбаба"</span>. <span id="prava">Все права защищены</span>
