--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,164 +1,155 @@
-﻿{% load staticfiles %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>PyBursa - detail students</title>
-    
-    <!-- Bootstrap core CSS -->
-    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static "css/style.css" %}" rel="stylesheet">
-
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
-    <script src="{% static "js/bootstrap.js" %}"></script>
-    <script src="{% static "js/user-scripts.js" %}"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>ITBursa информация о студенте</title>
+  <!-- Bootstrap -->
+  <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
+  <link href="{% static 'css/style.css'%}" rel="stylesheet">
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-<body>
-
+<body role="document">
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-
-      <!-- The justified navigation menu is meant for single line per list item.
-           Multiple lines will require custom code not provided by Bootstrap. -->
-      <div class="masthead">
-        <h3 class="text-muted">Pybursa</h3>
-        <nav>
-          <ul class="nav nav-justified">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student_list' %}">Students</a></li>
-          </ul>
-        </nav>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{% url 'index' %}">
+          <img class="logo" alt="Logo" src="{% static 'images/logo.svg'%}">
+        </a>
       </div>
-      <!-- Jumbotron -->
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="{% url 'index' %}">Main</a></li>
+          <li><a href="{% url 'contact' %}">Contacts</a></li>
+          <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
+        </ul>
+      </div>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
+  <div class="container theme-showcase" role="main">
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+      <div class="col-md-12">
+        <h1>Рожков Павел</h1>
+        <div class="col-md-8">
+        <img class="avatar" src="{% static 'images/student_avatar.png'%}">
+        </div>
+        <div class="col-md-8">
+        <button type="button" class="btn btn-lg btn-success btn-o-sebe">Студент о себе</button>
+        <h3>Student's cards</h3>
+        </div>
+      </div>
       <div class="row">
-        <div class="col-md-4">
-          <h2>Olena Persianova</h2>
-          <img src="{% static "images/olena_p.jpg" %}" class="img-responsive img-rounded">
-          <hr>
-          <table class="table table-hover left table-responsive">
-          <thead>
-          <tr>
-            <th colspan="2">Studen card</th>
-          </tr>
-          </thead>
-            <tbody>
-              <tr>
-                <td>Surname</td>
-                <td>Persianova</td>
+        <div class="col-md-6">
+          <table class="table tbl">
+           <tbody>
+              <tr class="pod">
+                <td class="tbl">Surname</td>
+                <td class="tbl">Рожков</td>
               </tr>
-              <tr>
-                <td>Name</td>
-                <td>Olena</td>
+              <tr class="pod" >
+                <td class="tbl">Name</td>
+                <td class="tbl">Павел</td>
               </tr>
-              <tr>
-                <td>Patronymic</td>
-                <td>Yuriivna</td>
+              <tr class="pod" >
+                <td class="tbl">Patronymic</td>
+                <td class="tbl">Геннадиевич</td>
               </tr>
-              <tr>
-                <td>Birth Date</td>
-                <td>11/02/1989</td>
+              <tr  class="pod">
+                <td class="tbl">Birth Date</td>
+                <td class="tbl">26.02.1994</td>
               </tr>
-              <tr>
-                <td>Address</td>
-                <td>Украина, г.Харьков, ул.Иванова, д.36, кв.3</td>
+              <tr class="pod" >
+                <td class="tbl">Address</td>
+                <td class="tbl">г. Усть-Джегута, ул. Бауманская, дом 34, квартира 48</td>
               </tr>
-              <tr>
-                <td>E-mail</td>
-                <td>olena.persianova@gmail.com</td>
+              <tr class="pod" >
+                <td class="tbl">E-mail</td>
+                <td class="tbl">tayskiyostap287@gmail.com</td>
               </tr>
-              <tr>
-                <td>Rating</td>
-                <td>20</td>
+              <tr class="pod" >
+                <td class="tbl">Skype</td>
+                <td class="tbl">TayskiyOstap287</td>
               </tr>
-              <tr>
-              <td>Problem Task</td>
-              <td>100%</td>
-              <tr>
-                <td>Average Grade</td>
-                <td>99.9</td>
+              <tr  class="pod">
+                <td class="tbl">Package</td>
+                <td class="tbl">Standart</td>
               </tr>
-              <tr>
-                <td>Skype</td>
-                <td>olena.persianova</td>
-              </tr>              
+              <tr class="pod" >
+                <td class="tbl">Average Grade</td>
+                <td class="tbl">100%</td>
+              </tr>
+              <tr  class="pod">
+                <td class="tbl">Ratingv</td>
+                <td class="tbl">1</td>
+              </tr>
             </tbody>
           </table>
         </div>
-      <div class="col-md-4 col-md-offset-4">
-        <div style="margin-top: 20px; margin-bottom: 10px;">
-          <ul class="nav nav-pills nav-stacked" style="max-width: 300px;">
-          <li><a href="https://www.python.org/">О Python (официальный сайт)</a></li>
-          <li><a href="http://pybursa.com/">Организация</a></li>
-          <li><a href="http://pybursa.com/">Цены</a></li>
-          </ul>
+        <div class="col-md-6">
+          <table class="table tbl">
+      
+           <tbody>
+           <tr  class="pod">
+              <td class="tbl">Course</td>
+              <td class="tbl">Week</td>
+              <td class="tbl">Control type</td>
+              <td class="tbl">Grade</td>
+            </tr>
+              <tr >
+                <td class="tbl" rowspan="4">Python Введение</td>
+                <td class="tbl" rowspan="2">Week1</td>
+                <td class="tbl">Tests</td>
+                <td class="tbl">100</td>
+              </tr>
+              <tr >                
+                <td class="tbl">Problem Task 1</td>
+                <td class="tbl">100</td>
+              </tr>
+              <tr >              
+                <td class="tbl" rowspan="2">Week2</td>  
+                <td class="tbl">Tests</td>
+                <td class="tbl">100</td>
+              </tr> 
+              <tr >                
+                <td class="tbl">Problem Task 2</td>
+                <td class="tbl">100</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
+
       </div>
     </div>
+  </div>
+  </div>
+  <div class="panel-footer newfooter">
+    Сайт компании <span class="firma">ООО"блбаба"</span>. <span id="prava">Все права защищены</span>
+  </div>
 
-      <hr>
-      <div container-fluid>
-      <p><b>Perfomance</b></p>
-        <table class="table left table-responsive">
-          <thead>
-          <tr>
-            <th>Course</th>
-            <th>Week</th>
-            <th>Control Type</th>
-            <th>Grade</th>
-          </tr>
-          </thead>
-            <tbody>
-              <tr>
-                <td rowspan="6">PY102 Введение в Python</td>
-                <td rowspan="3">Week 1</td>
-                <td>Tests</td>
-                <td>99.9%</td>
-              </tr>
-              <tr>
-                <td>Problem task №1</td>
-                <td>100%</td>
-              </tr>
-              <tr>
-                <td>Problem task №2</td>
-                <td>100%</td>
-              </tr>
-                <td rowspan="3">Week 2</td>
-                <td>Tests</td>
-                <td>100%</td>
-              </tr>
-              <tr>
-                <td>Problem task №1</td>
-                <td>100%</td>
-              </tr>
-              <tr>
-                <td>Problem task №2</td>
-                <td>100%</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; ItBursa 2015</p>
-      </footer>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+</body>
 
-    </div> <!-- /container -->
-  </body>
 </html>
