--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,115 +1,117 @@
-﻿{% load staticfiles %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Список студентов PyBursa на 2015 год</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static "css/style.css" %}" rel="stylesheet">
-
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="{% static "js/ie-emulation-modes-warning.js" %}"></script>
-    <script src="{% static "js/bootstrap.js" %}"></script>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>ITBursa Студенты</title>
+  <!-- Bootstrap -->
+  <link href="{% static 'css/bootstrap.css'%}" rel="stylesheet">
+  <link href="{% static 'css/style.css'%}" rel="stylesheet">
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-<body>
-
+<body role="document">
+  <!-- Fixed navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-
-      <!-- The justified navigation menu is meant for single line per list item.
-           Multiple lines will require custom code not provided by Bootstrap. -->
-      <div class="masthead">
-        <h3 class="text-muted">Pybursa</h3>
-        <nav>
-          <ul class="nav nav-justified">
-            <li><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
-          </ul>
-        </nav>
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{% url 'index' %}">
+          <img class="logo" alt="Logo" src="{% static 'images/logo.svg'%}">
+        </a>
       </div>
-      <!-- Jumbotron -->
-      <div class="jumbotron first_block">
-        <h1>Курс PyBursa</h1>
-        <p>Список студентов PyBursa выпуск декабрь 2015 г.</p>
+      <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="{% url 'index' %}">Main</a></li>
+          <li><a href="{% url 'contact' %}">Contacts</a></li>
+          <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
+        </ul>
       </div>
-      <hr>
-      <div class="jumbotron second_block">
-        <table class="table table-hover left table-responsive">
-      <thead>
-        <tr>
-          <th>No</th>
-          <th>Surname</th>
-          <th>Name</th>
-          <th>Address</th>
-          <th>Skype</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><a href="{% url 'student_detail' %}">1</a></td>
-          <td>Persianova</td>
-          <td>Olena</td>
-          <td>Украина, г.Харьков, ул.Иванова, д.36, кв.3</td>
-          <td>olena.persianova</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>Украина, г.Харьков, ул.Рымарская, д.37, кв.3</td>
-          <td>skype2</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Larry</td>
-          <td>Bird</td>
-          <td>Украина, г.Харьков, ул.Культуры, д.38, кв.3</td>
-          <td>skype3</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Sarra</td>
-          <td>Conor</td>
-          <td>США, г.Нью-Йорк, ул.Брайтан-Бич, д.38, кв.13</td>
-          <td>sarra_conor</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Serhii</td>
-          <td>Siedovolosij</td>
-          <td>Украина, г.Харьков, проспект Ленина, д.47/1, кв.18</td>
-          <td>sedovolosiy</td>
-        </tr>
-      </tbody>
-    </table>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
+  <div class="container theme-showcase" role="main">
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container">
+        <h1>Студенты курса: PyBursa</h1>
       </div>
-      <!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; ItBursa 2015</p>
-      </footer>
+      <div class="row">
+        <div class="col-md-12">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>No</th>
+                <th>Surname</th>
+                <th>Name</th>
+                <th>Address</th>
+                <th>Skype</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="{% url 'student_detail' %}">1</a></td>
+                <td>Рожков</td>
+                <td>Павел</td>
+                <td>г. Фурманов, ул. Академическая, дом 27, квартира 13</td>
+                <td>RusinFilipp336</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>Яковлева</td>
+                <td>Харитина</td>
+                <td>г. Холмогоры, ул. Маршала Конева, дом 89, квартира 134</td>
+                <td>YakovlevaHaritina114</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>Недашковский</td>
+                <td>Вячеслав</td>
+                <td>г. Фрунзенское, ул. Гвардейская, дом 20, квартира 170</td>
+                <td>NedashkovskiyVyacheslav165</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Кудрявцева</td>
+                <td>Элиза</td>
+                <td>г. Усть-Калманка, ул. Железнодорожников, дом 42, квартира 180</td>
+                <td>KudryavtsevaEliza213</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>Тайский</td>
+                <td>Остап</td>
+                <td>г. Усть-Джегута, ул. Бауманская, дом 34, квартира 48</td>
+                <td>TayskiyOstap287</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="panel-footer newfooter">
+    Сайт компании <span class="firma">ООО"блбаба"</span>. <span id="prava">Все права защищены</span>
+  </div>
 
-    </div> <!-- /container -->
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+</body>
 
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
 </html>
